--- a/ArvoreKD.ipynb
+++ b/ArvoreKD.ipynb
@@ -36,6 +36,7 @@
     "class Node:\n",
     "    left = None\n",
     "    right = None\n",
+    "    dimension = None\n",
     "    plane = None\n",
     "    point = None\n",
     "    def __init__(self):\n",
@@ -45,11 +46,7 @@
     "        return a\n",
     "    def __le__(self,other):\n",
     "        a = False\n",
-    "        return a\n",
-    "    def setDimension(self, dimension):\n",
-    "        self.dimension = dimension\n",
-    "    def setValue(self, value):\n",
-    "        self.value = float(value)"
+    "        return a"
    ]
   },
   {
@@ -275,7 +272,7 @@
      "text": [
       "Predicted         Iris-setosa   Iris-versicolor   Iris-virginica\n",
       "Actual                                                          \n",
-      "Iris-setosa                15                 0                0\n",
+      "Iris-setosa                13                 0                0\n",
       " Iris-versicolor            0                 0                0\n",
       " Iris-virginica             0                 0                0\n",
       "Acurácia é 1.0\n",
@@ -299,13 +296,13 @@
      "text": [
       "Predicted  -1.0  1.0\n",
       "Actual              \n",
-      "-1.0        779   95\n",
-      "1.0         139  578\n",
-      "Acurácia é 0.8529226901319925\n",
-      "Precisão de '-1.0' é 0.8913043478260869\n",
-      "Precisão de '1.0' é 0.806136680613668\n",
-      "Revocação de '-1.0' é 0.8485838779956427\n",
-      "Revocação de '1.0' é 0.8588410104011887\n"
+      "-1.0        807   80\n",
+      "1.0         137  567\n",
+      "Acurácia é 0.863607793840352\n",
+      "Precisão de '-1.0' é 0.9098083427282976\n",
+      "Precisão de '1.0' é 0.8053977272727273\n",
+      "Revocação de '-1.0' é 0.8548728813559322\n",
+      "Revocação de '1.0' é 0.8763523956723338\n"
      ]
     }
    ],
@@ -324,13 +321,13 @@
      "text": [
       "Predicted  -1.0  1.0\n",
       "Actual              \n",
-      "-1.0        460    0\n",
-      "1.0         148   53\n",
-      "Acurácia é 0.7760968229954615\n",
-      "Precisão de '-1.0' é 1.0\n",
-      "Precisão de '1.0' é 0.263681592039801\n",
-      "Revocação de '-1.0' é 0.756578947368421\n",
-      "Revocação de '1.0' é 1.0\n"
+      "-1.0         72  373\n",
+      "1.0          31  185\n",
+      "Acurácia é 0.3888048411497731\n",
+      "Precisão de '-1.0' é 0.16179775280898875\n",
+      "Precisão de '1.0' é 0.8564814814814815\n",
+      "Revocação de '-1.0' é 0.6990291262135923\n",
+      "Revocação de '1.0' é 0.33154121863799285\n"
      ]
     }
    ],
@@ -349,29 +346,28 @@
      "text": [
       "Predicted  cp  im  imS  imL  imU  om  omL  pp\n",
       "Actual                                       \n",
-      "cp         36   0    0    0    0   0    0   3\n",
-      "im          2  15    0    0    7   0    0   3\n",
-      "imS         0   1    0    0    0   0    0   1\n",
+      "cp         42   1    0    0    0   1    0   0\n",
+      "im          0  21    0    0    6   0    0   1\n",
+      "imS         0   0    0    0    0   0    0   0\n",
       "imL         0   0    0    0    0   0    1   0\n",
-      "imU         0   3    0    0    3   0    0   1\n",
-      "om          1   1    0    0    0   4    0   2\n",
-      "omL         0   0    0    0    0   0    1   0\n",
-      "pp          4   0    0    0    0   0    0  12\n",
-      "Acurácia é 0.7029702970297029\n",
-      "Precisão de 'cp' é 0.9230769230769231\n",
-      "Precisão de 'im' é 0.5555555555555556\n",
-      "Precisão de 'imS' é 0.0\n",
+      "imU         0   2    0    0    7   0    1   1\n",
+      "om          1   1    0    0    0   4    0   0\n",
+      "omL         0   0    0    0    0   0    0   0\n",
+      "pp          0   0    1    0    1   0    0   9\n",
+      "Acurácia é 0.8217821782178217\n",
+      "Precisão de 'cp' é 0.9545454545454546\n",
+      "Precisão de 'im' é 0.75\n",
       "Precisão de 'imL' é 0.0\n",
-      "Precisão de 'imU' é 0.42857142857142855\n",
-      "Precisão de 'om' é 0.5\n",
-      "Precisão de 'omL' é 1.0\n",
-      "Precisão de 'pp' é 0.75\n",
-      "Revocação de 'cp' é 0.8372093023255814\n",
-      "Revocação de 'im' é 0.75\n",
-      "Revocação de 'imU' é 0.3\n",
-      "Revocação de 'om' é 1.0\n",
-      "Revocação de 'omL' é 0.5\n",
-      "Revocação de 'pp' é 0.5454545454545454\n"
+      "Precisão de 'imU' é 0.6363636363636364\n",
+      "Precisão de 'om' é 0.6666666666666666\n",
+      "Precisão de 'pp' é 0.8181818181818182\n",
+      "Revocação de 'cp' é 0.9767441860465116\n",
+      "Revocação de 'im' é 0.84\n",
+      "Revocação de 'imS' é 0.0\n",
+      "Revocação de 'imU' é 0.5\n",
+      "Revocação de 'om' é 0.8\n",
+      "Revocação de 'omL' é 0.0\n",
+      "Revocação de 'pp' é 0.8181818181818182\n"
      ]
     }
    ],
@@ -390,7 +386,7 @@
      "text": [
       "Predicted     0   1\n",
       "Actual             \n",
-      "0          1044   0\n",
+      "0          1049   0\n",
       " 1            0   0\n",
       "Acurácia é 1.0\n",
       "Precisão de '0' é 1.0\n",
@@ -413,7 +409,7 @@
      "text": [
       "Predicted         tested_negative   tested_positive\n",
       "Actual                                             \n",
-      "tested_negative               107                 0\n",
+      "tested_negative               110                 0\n",
       " tested_positive                0                 0\n",
       "Acurácia é 1.0\n",
       "Precisão de 'tested_negative' é 1.0\n",
@@ -436,7 +432,7 @@
      "text": [
       "Predicted  positive   negative\n",
       "Actual                        \n",
-      "positive         10          0\n",
+      "positive          8          0\n",
       " negative         0          0\n",
       "Acurácia é 1.0\n",
       "Precisão de 'positive' é 1.0\n",
@@ -459,7 +455,7 @@
      "text": [
       "Predicted   1   2\n",
       "Actual           \n",
-      "1          28   0\n",
+      "1          33   0\n",
       " 2          0   0\n",
       "Acurácia é 1.0\n",
       "Precisão de '1' é 1.0\n",
@@ -482,7 +478,7 @@
      "text": [
       "Predicted   M   B\n",
       "Actual           \n",
-      "M          52   0\n",
+      "M          64   0\n",
       " B          0   0\n",
       "Acurácia é 1.0\n",
       "Precisão de 'M' é 1.0\n",
@@ -505,13 +501,13 @@
      "text": [
       "Predicted   0  1\n",
       "Actual          \n",
-      "0          22  5\n",
-      "1           1  4\n",
+      "0          22  1\n",
+      "1           5  4\n",
       "Acurácia é 0.8125\n",
-      "Precisão de '0' é 0.8148148148148148\n",
-      "Precisão de '1' é 0.8\n",
-      "Revocação de '0' é 0.9565217391304348\n",
-      "Revocação de '1' é 0.4444444444444444\n"
+      "Precisão de '0' é 0.9565217391304348\n",
+      "Precisão de '1' é 0.4444444444444444\n",
+      "Revocação de '0' é 0.8148148148148148\n",
+      "Revocação de '1' é 0.8\n"
      ]
     }
    ],
